# ParallelComputingPractice

Lab1/: CMakeLists.txt  README.md
Lab1/include/csv_document/: csvdocument.h
Lab1/src/: backpack.cpp  csvdocument.cpp  travelling_salesman.cpp
